[package]
name = "pacdef"
version = "1.0.0"
edition = "2021"
description = "declarative package manager for Linux"
license = "GPL-3.0-or-later"
repository = "https://github.com/steven-omaha/pacdef"
readme = "README.md"
keywords = ["package-manager", "linux", "declarative", "cli"]
categories = ["command-line-utilities"]
rust-version = "1.65"

[workspace]
members = ["crates/pacdef_macros", "crates/pacdef_core"]

[workspace.dependencies]
anyhow = "1.0"

[dependencies]
anyhow = {workspace = true}
pacdef_core = {path = "crates/pacdef_core", version = "=1.0.0" }

[[bin]]
name = "pacdef"
path = "crates/main/main.rs"

[profile.release]
lto = "off"
opt-level = "z"
strip = true

[features]
default = []
debian = ["pacdef_core/debian"]
arch = ["pacdef_core/arch"]
