[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/steven-omaha/pacdef"
readme = "README.md"
keywords = ["package-manager", "linux", "declarative", "cli"]
categories = ["command-line-utilities"]
rust-version = "1.74"

[workspace.dependencies]
pacdef = { path = "crates/pacdef" }

[profile.release]
lto = "off"
opt-level = "z"
strip = true
