[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "pacdef"
version = "0.8.0"
description = "declarative package manager for Arch Linux"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "steven-omaha"}]
dependencies = ["pyalpm"]

[project.urls]
homepage = "https://github.com/steven-omaha/pacdef"
repository = "https://github.com/steven-omaha/pacdef.git"

[project.entry-points.console_scripts]
pacdef = "pacdef.main:main"

[tool.pyright]
include = ["pacdef/"]

reportConstantRedefinition = "warning"
reportDuplicateImport = "warning"
reportFunctionMemberAccess = "warning"
reportImplicitStringConcatenation = "warning"
reportImportCycles = "error"
reportMatchNotExhaustive = "warning"
reportMissingTypeArgument = "warning"
reportMissingTypeStubs = "information"
reportPrivateUsage = "warning"
reportPropertyTypeMismatch = "warning"
reportUknownMemberType = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownParameterType = "warning"
reportUnnecessaryCast = "information"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = "information"
reportUntypedFunctionDecorator = "warning"
reportUnusedCallResult = "information"
reportUnusedClass = "warning"
reportUnusedExpression = "information"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"

[tool.isort]
line_length = 88
