[package]
name = "core"
version = "1.0.0-beta2"
edition = "2021"
description = "declarative package manager for Arch Linux"
license = "GPLv3"
repository = "https://github.com/steven-omaha/pacdef"

[dependencies]
alpm = "*"
anyhow = "*"
clap = "*"
path-absolutize = "*"
regex = "*"
serde_json = "*"
serde_yaml = "*"
serde_derive = "*"
serde = "*"
termios = "*"

macros = {path = "../macros", version = "*"}
