[package]
name = "core"
version = "1.0.0-beta2"
edition = "2021"
description = "pacdef main library"

[dependencies]
alpm = "*"
anyhow = "*"
clap = "*"
path-absolutize = "*"
regex = "*"
serde_json = "*"
serde_yaml = "*"
serde_derive = "*"
serde = "*"
termios = "*"

macros = {path = "../macros", version = "*"}
