[package]
name = "core"
version = "1.0.0-beta2"
edition = "2021"
description = "pacdef main library"

[dependencies]
alpm = "2.2"
anyhow = "1.0"
clap = "4.1"
path-absolutize = "3.0"
regex = "1.7"
termios = "0.3"

serde_json = "1.0"
serde_yaml = "0.9"
serde_derive = "1.0"
serde = "1.0"

macros = {path = "../macros", version = "0.1"}
