[package]
name = "macros"
version = "0.1.0"
edition = "2021"
description = "procedural macros for pacdef"
repository = "https://github.com/steven-omaha/pacdef"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "*"
quote = "*"
syn = "*"

[lib]
proc-macro = true
