[package]
name = "pacdef"
description = "multi-backend declarative package manager for Linux"
version = "1.6.0"

edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
const_format = { version = "0.2", default-features = false }
path-absolutize = "3.1"
regex = { version = "1.10", default-features = false, features = ["std"] }
walkdir = "2.5"
libc = "0.2"
enum_dispatch = "0.3"
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
derive_more = "0.99"
itertools = "0.12"

alpm = "3.0"
rust-apt = "0.7"
