[package]
name = "pacdef_core"
version = "1.0.0-beta.16"
edition = "2021"
description = "pacdef core library"
license = "GPL-3.0-or-later"
repository = "https://github.com/steven-omaha/pacdef"
readme = "README.md"
keywords = ["package-manager", "linux", "declarative", "cli"]
categories = ["command-line-utilities"]

[package.metadata.docs.rs]
features = ["alpm/docs-rs"]

[dependencies]
anyhow = { workspace = true }
clap = "4.1"
const_format = { version = "0.2", default-features = false }
path-absolutize = "3.0"
regex = "1.7"
termios = "0.3"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"

pacdef_macros = { path = "../pacdef_macros", version = "0.1" }

# backends
alpm = { version = "2.2", optional = true }
rust-apt = { version = "0.5", optional = true }

[features]
default = []
arch = ["dep:alpm"]
debian = ["dep:rust-apt"]
