[package]
name = "pacdef_core"
version = "1.6.0"
edition = "2021"
description = "pacdef core library"
license = "GPL-3.0-or-later"
repository = "https://github.com/steven-omaha/pacdef/tree/main/crates/pacdef_core"
readme = "README.md"
keywords = ["package-manager", "linux", "declarative", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = { workspace = true }
clap = "4.5"
const_format = { version = "0.2", default-features = false }
path-absolutize = "3.1"
regex = { version = "1.10", default-features = false, features = ["std"] }
termios = "0.3"
walkdir = "2.5"
libc = "0.2"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"

pacdef_macros = { path = "../pacdef_macros", version = "1.0" }

# backends
alpm = { version = "3.0", optional = true }
rust-apt = { version = "0.7", optional = true }

[dev-dependencies]
rstest = "0.19"

[features]
default = []
arch = ["dep:alpm"]
debian = ["dep:rust-apt"]
