[package]
name = "pacdef_macros"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/steven-omaha/pacdef"
description = "procedural macros for pacdef"
keywords = ["macro", "proc-macro"]
categories = ["command-line-utilities"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[lib]
proc-macro = true
