[package]
name = "pacdef_macros"
description = "procedural macros for pacdef"
version = "1.0.1"

edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[lib]
proc-macro = true
