[package]
name = "pacdef_main"
version = "1.0.0-beta3"
edition = "2021"
description = "main program for pacdef"
license = "GPLv3"
repository = "https://github.com/steven-omaha/pacdef"
readme = "README.md"
keywords = ["package-manager", "linux", "declarative", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "pacdef"
path = "main.rs"

[dependencies]
anyhow = "1.0"
pacdef_core = { path = "../pacdef_core", version = "1.0.0-beta3" }
